--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -220,10 +220,10 @@ jobs:
         script: |
           sudo apt-get install -y jq
           wget https://go.dev/dl/go1.16.15.linux-amd64.tar.gz 
-          tar -C /usr/local -xzf go1.16.15.linux-amd64.tar.gz
+          sudo tar -C /usr/local -xzf go1.16.15.linux-amd64.tar.gz
 
           sudo tee -a /etc/profile.d/go.sh > /dev/null <<EOT
-          export PATH=$PATH:/usr/local/go/bin
+          export PATH=\$PATH:/usr/local/go/bin
           EOT
 
           git clone https://github.com/lamassuiot/lamassu-compose -b develop && cd lamassu-compose
