--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -148,6 +148,30 @@ jobs:
             lamassuiot/lamassu-cloud-proxy-dev:latest
           push: true
 
+  build_lamassu_db_dev_docker_image:
+      name: DB - Release DEV docker images
+      needs:
+      - unit_testing_ca
+      - unit_testing_dms_enroller
+      - unit_testing_device_manager
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Cloud Proxy DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/lamassu-db.dockerfile 
+          tags: |
+            lamassuiot/lamassu-db-dev:${{ github.sha }}
+            lamassuiot/lamassu-db-dev:latest
+          push: true
+
   create_dev_server_env:
     name: Create DEV Server
     needs:
@@ -156,6 +180,7 @@ jobs:
     - build_device_manager_dev_docker_image
     - build_dms_enroller_dev_docker_image
     - build_ocsp_dev_docker_image
+    - build_lamassu_db_dev_docker_image
     runs-on: ubuntu-latest
     environment: release
     permissions:
@@ -219,7 +244,7 @@ jobs:
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
           sudo apt-get install -y jq
-          wget https://go.dev/dl/go1.16.15.linux-amd64.tar.gz 
+          wget -q https://go.dev/dl/go1.16.15.linux-amd64.tar.gz 
           sudo tar -C /usr/local -xzf go1.16.15.linux-amd64.tar.gz
 
           sudo tee -a /etc/profile.d/go.sh > /dev/null <<EOT
