--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,181 +6,181 @@ on:
       - release
 
 jobs:
-  unit_testing_ca:
-    name: CA Unit Testing
-    uses: ./.github/workflows/ca-develop.yaml
+  # unit_testing_ca:
+  #   name: CA Unit Testing
+  #   uses: ./.github/workflows/ca-develop.yaml
 
-  unit_testing_dms_enroller:
-    name: DMS Enroller Unit Testing
-    uses: ./.github/workflows/dms-enroller-develop.yaml
+  # unit_testing_dms_enroller:
+  #   name: DMS Enroller Unit Testing
+  #   uses: ./.github/workflows/dms-enroller-develop.yaml
 
-  unit_testing_device_manager:
-    name: DeviceManager Unit Testing
-    uses: ./.github/workflows/device-manager-develop.yaml
+  # unit_testing_device_manager:
+  #   name: DeviceManager Unit Testing
+  #   uses: ./.github/workflows/device-manager-develop.yaml
 
-  build_ca_dev_docker_image:
-      name: CA - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_ca_dev_docker_image:
+  #     name: CA - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:        
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build CA DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/ca.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-ca-dev:${{ github.sha }}
-            lamassuiot/lamassu-ca-dev:latest
-          push: true
+  #     - name: Build CA DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/ca.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-ca-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-ca-dev:latest
+  #         push: true
 
-  build_device_manager_dev_docker_image:
-      name: Device Manager - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_device_manager_dev_docker_image:
+  #     name: Device Manager - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Device Manager DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/device-manager.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
-            lamassuiot/lamassu-device-manager-dev:latest
-          push: true
+  #     - name: Build Device Manager DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/device-manager.dockerfile 
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-device-manager-dev:latest
+  #         push: true
 
-  build_dms_enroller_dev_docker_image:
-      name: DMS Enroller - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_dms_enroller_dev_docker_image:
+  #     name: DMS Enroller - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build DMS Enroller DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/dms-enroller.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
-            lamassuiot/lamassu-dms-enroller-dev:latest
-          push: true
+  #     - name: Build DMS Enroller DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/dms-enroller.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-dms-enroller-dev:latest
+  #         push: true
 
-  build_ocsp_dev_docker_image:
-      name: OCSP - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_ocsp_dev_docker_image:
+  #     name: OCSP - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build OCSP DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/ocsp.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
-            lamassuiot/lamassu-ocsp-dev:latest
-          push: true
+  #     - name: Build OCSP DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/ocsp.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-ocsp-dev:latest
+  #         push: true
 
-  build_cloud_proxy_dev_docker_image:
-      name: Cloud Proxy - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_cloud_proxy_dev_docker_image:
+  #     name: Cloud Proxy - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Cloud Proxy DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/cloud-proxy.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
-            lamassuiot/lamassu-cloud-proxy-dev:latest
-          push: true
+  #     - name: Build Cloud Proxy DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/cloud-proxy.dockerfile 
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-cloud-proxy-dev:latest
+  #         push: true
 
-  build_lamassu_db_dev_docker_image:
-      name: DB - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_lamassu_db_dev_docker_image:
+  #     name: DB - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Cloud Proxy DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/lamassu-db.dockerfile 
-          tags: |
-            lamassuiot/lamassu-db-dev:${{ github.sha }}
-            lamassuiot/lamassu-db-dev:latest
-          push: true
+  #     - name: Build DB DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/lamassu-db.dockerfile 
+  #         tags: |
+  #           lamassuiot/lamassu-db-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-db-dev:latest
+  #         push: true
 
   create_dev_server_env:
     name: Create DEV Server
-    needs:
-    - build_ca_dev_docker_image
-    - build_cloud_proxy_dev_docker_image
-    - build_device_manager_dev_docker_image
-    - build_dms_enroller_dev_docker_image
-    - build_ocsp_dev_docker_image
-    - build_lamassu_db_dev_docker_image
+    # needs:
+    # - build_ca_dev_docker_image
+    # - build_cloud_proxy_dev_docker_image
+    # - build_device_manager_dev_docker_image
+    # - build_dms_enroller_dev_docker_image
+    # - build_ocsp_dev_docker_image
+    # - build_lamassu_db_dev_docker_image
     runs-on: ubuntu-latest
     environment: release
     permissions:
@@ -243,6 +243,12 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
+          git clone https://github.com/vegasbrianc/prometheus.git
+          docker swarm init
+          cd prometheus
+          HOSTNAME=$(hostname) docker stack deploy -c docker-stack.yml prom
+          cd ..
+
           sudo apt-get install -y jq
           wget -q https://go.dev/dl/go1.16.15.linux-amd64.tar.gz 
           sudo tar -C /usr/local -xzf go1.16.15.linux-amd64.tar.gz
@@ -298,7 +304,9 @@ jobs:
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
           git clone https://github.com/lamassuiot/lamassuiot -b release
-
+          cd lamassuiot
+          go run test/e2e/performance.go -domain=dev.lamassu.io -cert=../lamassu-compose/tls-certificates/downstream/tls.crt
+          
   ocsp_test:
     name: OCSP test
     runs-on: ubuntu-latest
