--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,181 +6,181 @@ on:
       - release
 
 jobs:
-  unit_testing_ca:
-    name: CA Unit Testing
-    uses: ./.github/workflows/ca-develop.yaml
+  # unit_testing_ca:
+  #   name: CA Unit Testing
+  #   uses: ./.github/workflows/ca-develop.yaml
 
-  unit_testing_dms_enroller:
-    name: DMS Enroller Unit Testing
-    uses: ./.github/workflows/dms-enroller-develop.yaml
+  # unit_testing_dms_enroller:
+  #   name: DMS Enroller Unit Testing
+  #   uses: ./.github/workflows/dms-enroller-develop.yaml
 
-  unit_testing_device_manager:
-    name: DeviceManager Unit Testing
-    uses: ./.github/workflows/device-manager-develop.yaml
+  # unit_testing_device_manager:
+  #   name: DeviceManager Unit Testing
+  #   uses: ./.github/workflows/device-manager-develop.yaml
 
-  build_ca_dev_docker_image:
-      name: CA - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_ca_dev_docker_image:
+  #     name: CA - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:        
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build CA DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/ca.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-ca-dev:${{ github.sha }}
-            lamassuiot/lamassu-ca-dev:latest
-          push: true
+  #     - name: Build CA DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/ca.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-ca-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-ca-dev:latest
+  #         push: true
 
-  build_device_manager_dev_docker_image:
-      name: Device Manager - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_device_manager_dev_docker_image:
+  #     name: Device Manager - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Device Manager DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/device-manager.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
-            lamassuiot/lamassu-device-manager-dev:latest
-          push: true
+  #     - name: Build Device Manager DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/device-manager.dockerfile 
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-device-manager-dev:latest
+  #         push: true
 
-  build_dms_enroller_dev_docker_image:
-      name: DMS Enroller - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_dms_enroller_dev_docker_image:
+  #     name: DMS Enroller - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build DMS Enroller DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/dms-enroller.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
-            lamassuiot/lamassu-dms-enroller-dev:latest
-          push: true
+  #     - name: Build DMS Enroller DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/dms-enroller.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-dms-enroller-dev:latest
+  #         push: true
 
-  build_ocsp_dev_docker_image:
-      name: OCSP - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_ocsp_dev_docker_image:
+  #     name: OCSP - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build OCSP DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/ocsp.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
-            lamassuiot/lamassu-ocsp-dev:latest
-          push: true
+  #     - name: Build OCSP DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/ocsp.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-ocsp-dev:latest
+  #         push: true
 
-  build_cloud_proxy_dev_docker_image:
-      name: Cloud Proxy - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_cloud_proxy_dev_docker_image:
+  #     name: Cloud Proxy - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Cloud Proxy DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/cloud-proxy.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
-            lamassuiot/lamassu-cloud-proxy-dev:latest
-          push: true
+  #     - name: Build Cloud Proxy DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/cloud-proxy.dockerfile 
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-cloud-proxy-dev:latest
+  #         push: true
 
-  build_lamassu_db_dev_docker_image:
-      name: DB - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_lamassu_db_dev_docker_image:
+  #     name: DB - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build DB DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/lamassu-db.dockerfile 
-          tags: |
-            lamassuiot/lamassu-db-dev:${{ github.sha }}
-            lamassuiot/lamassu-db-dev:latest
-          push: true
+  #     - name: Build DB DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/lamassu-db.dockerfile 
+  #         tags: |
+  #           lamassuiot/lamassu-db-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-db-dev:latest
+  #         push: true
 
   create_dev_server_env:
     name: Create DEV Server
-    needs:
-    - build_ca_dev_docker_image
-    - build_cloud_proxy_dev_docker_image
-    - build_device_manager_dev_docker_image
-    - build_dms_enroller_dev_docker_image
-    - build_ocsp_dev_docker_image
-    - build_lamassu_db_dev_docker_image
+    # needs:
+    # - build_ca_dev_docker_image
+    # - build_cloud_proxy_dev_docker_image
+    # - build_device_manager_dev_docker_image
+    # - build_dms_enroller_dev_docker_image
+    # - build_ocsp_dev_docker_image
+    # - build_lamassu_db_dev_docker_image
     runs-on: ubuntu-latest
     environment: release
     permissions:
@@ -253,11 +253,14 @@ jobs:
           wget -q https://go.dev/dl/go1.16.15.linux-amd64.tar.gz 
           sudo tar -C /usr/local -xzf go1.16.15.linux-amd64.tar.gz
 
+          echo $PATH
+
           sudo tee -a /etc/profile.d/go.sh > /dev/null <<EOT
           export PATH=\$PATH:/usr/local/go/bin
           EOT
 
           source /etc/profile.d/go.sh
+          echo $PATH
 
           git clone https://github.com/lamassuiot/lamassuiot -b release
           git clone https://github.com/lamassuiot/lamassu-compose -b develop && cd lamassu-compose
@@ -326,7 +329,8 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
-          echo $USER 
+          echo $PATH
+          which go
           cd /home/ubuntu/lamassuiot
           go install github.com/haveyoudebuggedit/gotestfmt/v2/cmd/gotestfmt@v2.3.1
           go test -json -v ./test/ocsp/ocsp_test.go -args -domain=dev.lamassu.io -cert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt -ocspSignKey=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.key -ocspSignCert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt | gotestfmt
@@ -347,7 +351,7 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
-          echo $USER
+          echo $PATH
           cd lamassuiot
           go install github.com/haveyoudebuggedit/gotestfmt/v2/cmd/gotestfmt@v2.3.1
           go test -json -v ./test/est/est_test.go -args -domain=dev.lamassu.io -cert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt | gotestfmt
