install go using user data

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -258,15 +258,6 @@ jobs:
           HOSTNAME=$(hostname) docker stack deploy -c docker-stack.yml prom
           cd ..
           
-          sudo apt-get install -y jq
-          wget -q https://go.dev/dl/go1.16.15.linux-amd64.tar.gz 
-          sudo tar -C /usr/local -xzf go1.16.15.linux-amd64.tar.gz
-
-          sudo tee -a /etc/profile.d/go.sh > /dev/null <<EOT
-          export PATH=$PATH:/usr/local/go/bin
-          EOT
-          source /etc/profile.d/go.sh
-
           git clone https://github.com/lamassuiot/lamassuiot -b release
           git clone https://github.com/lamassuiot/lamassu-compose -b develop && cd lamassu-compose
 
@@ -334,6 +325,8 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
+          echo $PATH
+          source /etc/profile.d/go.sh
           echo $PATH
           which go
           cd /home/ubuntu/lamassuiot
