--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -325,10 +325,7 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
-          echo $PATH
           source /etc/profile.d/go.sh
-          echo $PATH
-          which go
           cd /home/ubuntu/lamassuiot
           go install github.com/haveyoudebuggedit/gotestfmt/v2/cmd/gotestfmt@v2.3.1
           go test -json -v ./test/ocsp/ocsp_test.go -args -domain=dev.lamassu.io -cert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt -ocspSignKey=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.key -ocspSignCert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt | gotestfmt
@@ -349,7 +346,7 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
-          echo $PATH
+          source /etc/profile.d/go.sh
           cd lamassuiot
           go install github.com/haveyoudebuggedit/gotestfmt/v2/cmd/gotestfmt@v2.3.1
           go test -json -v ./test/est/est_test.go -args -domain=dev.lamassu.io -cert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt | gotestfmt
