--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -340,7 +340,7 @@ jobs:
           export DOMAIN=dev.lamassu.io
           sed -i 's/dev\.lamassu\.io/'$DOMAIN'/g' ./test/ocsp/.env
           go install github.com/haveyoudebuggedit/gotestfmt/v2/cmd/gotestfmt@v2.3.1
-          go test -json -v ./test/ocsp/ocsp_test.go -args -domain=dev.lamassu.io -cert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt -ocspSignKey=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.key -ocspSignCert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt | gotestfmt
+          go test -json -v ./test/ocsp/ocsp_test.go -args -domain=dev.lamassu.io -cert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt | gotestfmt
 
   est_test:
     name: EST test
