--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -318,7 +318,9 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
+          source /etc/profile.d/go.sh
           cd /home/ubuntu/lamassuiot
+          go install github.com/haveyoudebuggedit/gotestfmt/v2/cmd/gotestfmt@v2.3.1
           go test -json -v test/e2e/performance_test.go -domain=dev.lamassu.io -cert=/home/ubuntu/lamassu-compose/tls-certificates/downstream/tls.crt | gotestfmt
           
   ocsp_test:
