--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -1,15 +1,137 @@
-# name: Develop Workflow
+name: Develop Workflow
 
-# on:
-#   push:
-#     branches:
-#       - develop
+on:
+  push:
+    branches:
+      - master
 
-# jobs:
-#   lamassu_ca_unit_testing:
-#     runs-on: self-hosted
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0
+jobs:
+  build_ca_docker_image:
+      name: CA - Release docker images
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:        
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build CA docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/ca.dockerfile
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-ca:${{ github.sha }}
+            lamassuiot/lamassu-ca:latest
+          push: true
+
+  build_device_manager_docker_image:
+      name: Device Manager - Release docker images
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Device Manager docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/device-manager.dockerfile 
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassuice-manager:${{ github.sha }}
+            lamassuiot/lamassuice-manager:latest
+          push: true
+
+  build_dms_enroller_docker_image:
+      name: DMS Enroller - Release docker images
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build DMS Enroller docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/dms-enroller.dockerfile
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-dms-enroller:${{ github.sha }}
+            lamassuiot/lamassu-dms-enroller:latest
+          push: true
+
+  build_ocsp_docker_image:
+      name: OCSP - Release docker images
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build OCSP docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/ocsp.dockerfile
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-ocsp:${{ github.sha }}
+            lamassuiot/lamassu-ocsp:latest
+          push: true
+
+  build_cloud_proxy_docker_image:
+      name: Cloud Proxy - Release docker images
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Cloud Proxy docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/cloud-proxy.dockerfile 
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-cloud-proxy:${{ github.sha }}
+            lamassuiot/lamassu-cloud-proxy:latest
+          push: true
+
+  build_lamassu_db_docker_image:
+      name: DB - Release docker images
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build DB docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/lamassu-db.dockerfile 
+          tags: |
+            lamassuiot/lamassu-db:${{ github.sha }}
+            lamassuiot/lamassu-db:latest
+          push: true
