renamed branch master -> main

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: Master Workflow
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   tag_generator:
@@ -17,7 +17,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches : "master,main,develop"
+          release_branches : "main"
 
   build_ca_docker_image:
     name: CA - Release docker images
