--- a/.github/workflows/device-manager-develop.yaml
+++ b/.github/workflows/device-manager-develop.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - develop
     paths:
+        - '.github/workflows/device-manager*/**'
         - 'pkg/device-manager/**'
         - 'main/device-manager/**'
   workflow_call:
