infra: trigger on workflow file update

--- a/.github/workflows/ca-develop.yaml
+++ b/.github/workflows/ca-develop.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - develop
     paths:
+        - '.github/workflows/ca*'
         - 'pkg/ca/**'
         - 'main/ca/**'
   workflow_call:
