--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -177,7 +177,7 @@ jobs:
       - name: Build DB DEV docker image
         uses: docker/build-push-action@v2
         with:
-          file: ci/lamassu-db.dockerfile 
+          file: ci/database.dockerfile 
           tags: |
             lamassuiot/lamassu-db-dev:${{ github.sha }}
             lamassuiot/lamassu-db-dev:latest
